<resources>
    <string name="app_name">Volunteer Projects App</string>
    <string name="viewProjectsButtonText">View Projects</string>
    <string name="viewVolsButtonText">View Volunteers</string>
    <string name="addProjectButtonText">Add New Project</string>
    <string name="addVolButtonText">Add New Volunteer</string>
    <string name="deleteProjectButtonText">Delete Project</string>
    <string name="editProjectButtonText">Edit Project</string>
    <string name="projectAddVolunteersButtonText">Add Volunteer</string>
    <string name="newProjectNameText">Project Name</string>
    <string name="editProjectNameHint">Project Name</string>
    <string name="newProjectDateText">Date</string>
    <string name="newProjectCategoryText">Category</string>
    <string name="newProjectLocationText">Location</string>
    <string name="newProjectButtonText">Add New Project</string>
    <string name="editProjectDateHint">MM-DD-YYY</string>
    <string name="editProjectCategoryHint">Category</string>
    <string name="editProjectLocationHint">Location</string>
    <string name="submitProjectEditBtnText">Submit Project Changes</string>
    <string name="submitVolunteerEditButtonText">Submit Volunteer Changes</string>
    <string name="volunteerInterestsHint">Interests</string>
    <string name="volunteerNameHint">Name</string>
    <string name="volunteerAgeHint">Age</string>
    <string name="volunteerPhoneHint">Phone</string>
    <string name="deleteProjectVolButtonText">Remove Volunteer</string>
    <string name="deleteVolButtonText">Delete Volunteer</string>
    <string name="editVolButtonText">Edit Info</string>
    <string name="newVolunteerNameText">Name</string>
    <string name="newVolunteerAgeText">Age</string>
    <string name="newVolunteerPhoneText">Phone</string>
    <string name="newVolunteerInterestsText">Interests</string>
    <string name="newVolunteerButtonText">Add New Volunteer</string>
    <string name="confirmDeleteProjectButtonText">Confirm Delete Project</string>
    <string name="confirmDeleteVolunteerButtonText">Confirm Delete Volunteer</string>
    <string name="confirmRemoveVolunteerButtonText">Confirm Remove Volunteer</string>
    <string name="confirmAddVolunteerButtonText">Confirm Add Volunteer</string>
    <string name="removeVolText">Remove Volunteer: </string>
    <string name="volunteerRemovedText">Volunteer Has Been Removed From Project </string>
    <string name="volunteerRemoveErrorText">Error Removing Volunteer From Project </string>
    <string name="volunteerAddedText">Volunteer Added To Project </string>
    <string name="volunteerAddError">Error Adding Volunteer to Project </string>
    <string name="volunteerDeletedText">Volunteer Has Been Deleted </string>
    <string name="volunteerDeleteErrorText">Error Deleting Volunteer </string>
    <string name="projectedRemovedText">Project Has Been Deleted </string>
    <string name="projectRemoveErrorText">Error Deleting Project</string>
    <string name="nameText">Name: </string>
</resources>
