<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="ngantran.cs496final.EditVolunteerActivity"
android:orientation="vertical">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editVolName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/editVolAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/editVolPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/editVolInterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/newVolunteerNameText"/>

    <EditText
        android:id="@+id/newNameEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/volunteerNameHint"
        android:inputType="text"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/newVolunteerAgeText"/>

    <EditText
        android:id="@+id/newAgeEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/volunteerAgeHint"
        android:inputType="number"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/newVolunteerPhoneText"/>

    <EditText
        android:id="@+id/newPhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/volunteerPhoneHint"
        android:inputType="phone"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/newVolunteerInterestsText"/>

    <EditText
        android:id="@+id/newInterestsEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/volunteerInterestsHint"
        android:inputType="text"/>

</LinearLayout>




<Button
    android:id="@+id/submitVolunteerEditBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/submitVolunteerEditButtonText" />


</LinearLayout>
