<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ngantran.cs496final.EditProjectActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editProjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editProjectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editProjectCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editProjectLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newProjectNameText"/>

        <EditText
            android:id="@+id/newNameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editProjectNameHint"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newProjectDateText"/>

        <EditText
            android:id="@+id/newDateText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editProjectDateHint"
            android:inputType="date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newProjectCategoryText"/>

        <EditText
            android:id="@+id/newCategoryText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editProjectCategoryHint"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newProjectLocationText"/>

        <EditText
            android:id="@+id/newLocationText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editProjectLocationHint"
            android:inputType="text"/>

    </LinearLayout>

    <Button
        android:id="@+id/submitProjectEditBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitProjectEditBtnText" />

</LinearLayout>