<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ngantran.cs496final.AddProjectActivity">

    <EditText
        android:id="@+id/newProjectNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/newProjectNameText"/>

    <EditText
        android:id="@+id/newProjectDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/newProjectDateText" />

    <EditText
        android:id="@+id/newProjectCategoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/newProjectCategoryText" />

    <EditText
        android:id="@+id/newProjectLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/newProjectLocationText" />

    <Button
        android:id="@+id/newProjectBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newProjectButtonText" />

    <TextView
        android:id="@+id/newProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/newProjectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/newProjectCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/newProjectLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>