<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ngantran.cs496final.AddVolunteerActivity">

    <EditText
        android:id="@+id/newVolunteerNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/newVolunteerNameText"/>

    <EditText
        android:id="@+id/newVolunteerAgeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/newVolunteerAgeText" />

    <EditText
        android:id="@+id/newVolunteerPhoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/newVolunteerPhoneText" />

    <EditText
        android:id="@+id/newVolunteerInterestsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/newVolunteerInterestsText" />




    <Button
        android:id="@+id/newVolunteerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newVolunteerButtonText" />

    <TextView
        android:id="@+id/newVolunteerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/newVolunteerAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/newVolunteerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/newVolunteerInterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>